# CMakeProjects

01/src/: CMakeLists.txt
02/src/: CMakeLists.txt  build.sh
02/src-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
02/src-build/app/: Makefile  cmake_install.cmake
02/src-build/doc/: Makefile  cmake_install.cmake
02/src/app/: CMakeLists.txt
02/src/doc/: CMakeLists.txt
03/src/app/: CMakeLists.txt  test03.c
04/src/: CMakeLists.txt
04/src/app/: CMakeLists.txt  main.c
05/src/: CMakeLists.txt
05/src/app/: CMakeLists.txt
05/src/cmake/: FindTEST03.cmake
