SET(LIBSRC_LIST
    test03.c
    )

#add_library(test03 STATIC ${LIBSRC_LIST})
add_library(test03 SHARED ${LIBSRC_LIST})

#set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
#set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

install(TARGETS test03
#    RUNTIME DESTINATION bin
#    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    )

install(FILES test03.h
    DESTINATION include
    )
